# agente_generador_documentos

./: .env.example  .gitignore  CLAUDE.md  README.md  gradio_app.py  langgraph.json  main.py  pyproject.toml
.claude/: settings.local.json
nodes/: __init__.py  analyze_transcript.py  generate_pdd.py  generate_requirements.py  generate_user_stories.py  index_documents.py
templates/6fbfb96e-5647-4975-808c-0b9f1e0cc471/: REQUERIMIENTOS.md
templates/default/: HISTORIAS_USUARIO.md  PDD.md  REQUERIMIENTOS.md
utils/: __init__.py  azure_config.py  file_manager.py  template_manager.py  vector_store.py
