[project]
name = "agente-generador-documentos"
version = "0.1.0"
description = "Multi-document generator from conversation transcripts using LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.1.2",
    "langgraph>=1.0.4",
    "langgraph-cli[inmem]>=0.4.7",
    "openai>=2.9.0",
    "gradio>=4.0.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "python-docx>=1.1.0",
    "markdown>=3.5.0",
]
